--- a/scanner/index-sc.html
+++ b/scanner/index-sc.html
@@ -86,9 +86,10 @@
         <main>
             <label for="urlSelect">Selecciona la página:</label>
             <select id="urlSelect">
-                <option value="https://example.com">Example.com</option>
-                <option value="https://google.com">Google</option>
-                <!-- Agrega más opciones según tus necesidades -->
+                <option value="https://github.com/JoselitoJose/DiscoverySpain">DISCOVERY SPAIN APP</option>
+                <option value="https://joselitojose.github.io/DiscoverySpain/destinos/index-1.html">COMPARTE TUS DESTINOS</option>
+                <option value="https://joselitojose.github.io/DiscoverySpain/login.html">REGISTRO/LOGIN</option>
+                
             </select>
             <br>
             <button onclick="generarQR()" style=" font-weight: bold;">Generar QR</button>
