--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             // Aquí puedes agregar lógica adicional basada en 'transcript'
             // Por ejemplo, si transcript es 'perfil', haz algo específico
             if (transcript === 'perfil.') {
-                window.location.href = "http://localhost:3000/login.html";
+                window.location.href = "login.html";
                 mostrarLogin();
             }
             if (transcript === 'destinos.') {
