--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="container" id="container">
-            <a href="http://localhost:3000/index.html">
+            <a href="https://joselitojose.github.io/DiscoverySpain">
         <div class="header">
             <h1>
                 <br>
@@ -37,7 +37,7 @@
 
         <div class="content" id="content">
             <div class="dropdown">
-                <button class="animated-button"><span><a href="http://localhost:3000/index.html" > Menú </a></span></button>
+                <button class="animated-button"><span><a href="https://joselitojose.github.io/DiscoverySpain" > Menú </a></span></button>
                 <div class="dropdown-content">
                     <a href="login.html" onclick="mostrarLogin()">Perfil</a>
                  <a href="destinos/index-1.html" onclick="speak('Mis destinos')" >Mis destinos</a>
@@ -480,7 +480,7 @@
                 mostrarLogin();
             }
             if (transcript === 'destinos.') {
-                window.location.href = "http://localhost:3000/destinos/index-1.html";
+                window.location.href = "https://joselitojose.github.io/DiscoverySpain/destinos/index-1.html";
             }
             if (transcript === 'acceso.') {
                 mostrarAccesibilidad();
