--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 
     <div class="container" id="container">
     <div class="header">
-        <a href="http://localhost:3000/index.html"><h1>DISCOVERY SPAIN</h1></a>
+        <a href="https://joselitojose.github.io/DiscoverySpain"><h1>DISCOVERY SPAIN</h1></a>
     </div>
     </div>
 
@@ -27,7 +27,7 @@
         <input type="submit" name="Login" value="Login" class="login-submit" />
       </form>
       <a href="#" class="login-forgot-pass">¿Olvidaste la contraseña?</a>
-      <a href="http://localhost:3000/index.html" class="login-back">Volver al menu principal</a>
+      <a href="https://joselitojose.github.io/DiscoverySpain" class="login-back">Volver al menu principal</a>
       <div class="underlay-photo"></div>
       <div class="underlay-black"></div> 
 </body>
