--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="dropdown">
                 <button class="animated-button"><span><a href="https://joselitojose.github.io/DiscoverySpain" > Menú </a></span></button>
                 <div class="dropdown-content">
-                    <a href="login.html" onclick="mostrarLogin()">Perfil</a>
+                    <a href="https://joselitojose.github.io/DiscoverySpain/login.html" onclick="mostrarLogin()">Perfil</a>
                  <a href="destinos/index-1.html" onclick="speak('Mis destinos')" >Mis destinos</a>
                     <a href="#" id ="chatIcon"> Chat comunitario</a>
                     <!-- <a href="#"onclick="speak('Restaurantes')">Restaurantes</a> -->
@@ -476,7 +476,7 @@
             // Aquí puedes agregar lógica adicional basada en 'transcript'
             // Por ejemplo, si transcript es 'perfil', haz algo específico
             if (transcript === 'perfil.') {
-                window.location.href = "login.html";
+                window.location.href = "https://joselitojose.github.io/DiscoverySpain/login.html";
                 mostrarLogin();
             }
             if (transcript === 'destinos.') {
