--- a/scanner/index-sc.html
+++ b/scanner/index-sc.html
@@ -29,7 +29,8 @@
             text-decoration: underline;
         }
         .fondo {
-            box-shadow: 10px 10px 10px rgba(0, 0, 0, 1); /* Agrega una sombra negra */
+/*             box-shadow: 10px 10px 10px rgba(0, 0, 0, 1); /* Agrega una sombra negra */
+            box-shadow: 10px 10px 10px rgba(255, 255, 255, 1); /* Agrega una sombra negra */
             padding: 20px;
             width: auto;
             background-color: rgba(0, 0, 0, 0.7);
