--- a/scanner/index-sc.html
+++ b/scanner/index-sc.html
@@ -113,7 +113,7 @@
                         
                         width: 350,
                         height: 350,
-                        correctLevel: QRCode.CorrectLevel.H // Nivel de corrección de errores alto
+                        correctLevel: QRCode.CorrectLevel.H, // Nivel de corrección de errores alto
                         colorDark: "#3FDE63",  // Color de los módulos oscuros (verde)
                         colorLight: "#FFFFFF"  // Color de los módulos claros (blancos)
     
