--- a/scanner/index-sc.html
+++ b/scanner/index-sc.html
@@ -114,8 +114,8 @@
                         width: 350,
                         height: 350,
                         correctLevel: QRCode.CorrectLevel.H, // Nivel de corrección de errores alto
-                        colorDark: "#FF0000",  // Color de los módulos oscuros (verde)
-                        colorLight: "#FFFFFF"  // Color de los módulos claros (blancos)
+                        colorDark: "#FFFFFF",  // Color de los módulos oscuros (verde)
+                        colorLight: "#000000"  // Color de los módulos claros (blancos)
     
                     });
                 }
