--- a/scanner/index-sc.html
+++ b/scanner/index-sc.html
@@ -87,7 +87,7 @@
         <main>
             <label for="urlSelect">Selecciona la página:</label>
             <select id="urlSelect">
-                <option value="https://github.com/JoselitoJose/DiscoverySpain">DISCOVERY SPAIN APP</option>
+                <option value="https://joselitojose.github.io/DiscoverySpain">DISCOVERY SPAIN APP</option>
                 <option value="https://joselitojose.github.io/DiscoverySpain/destinos/index-1.html">COMPARTE TUS DESTINOS</option>
                 <option value="https://joselitojose.github.io/DiscoverySpain/login.html">REGISTRO/LOGIN</option>
                 
